<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.unitecker.app.ui.UploadActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        app:elevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                app:elevation="2dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                style="@style/ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />
            <RelativeLayout
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/appBarLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <RelativeLayout
                        android:id="@+id/relative_layout_select"
                        android:layout_width="100dp"
                        android:layout_height="112dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:elevation="5dp"
                            android:gravity="center"
                            android:text="+"
                            android:textAlignment="center"
                            android:textColor="#dde3ec"
                            android:textSize="70dp" />

                        <ImageView
                            android:id="@+id/image_view_tray_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/border_file"
                            android:elevation="2dp"
                            android:padding="5dp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="110dp"
                        android:layout_marginTop="-3dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:theme="@style/textview_login">

                            <EditText
                                android:id="@+id/edit_text_input_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/edit_text_bg"
                                android:fontFamily="@font/google_sans"
                                android:hint="@string/hint_pack_name"
                                android:inputType="textEmailAddress"
                                android:padding="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_input_layout_publisher"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="42dp"
                                android:layout_marginBottom="7dp"
                                android:theme="@style/textview_login">

                                <EditText
                                    android:id="@+id/edit_text_input_publisher"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:background="@drawable/edit_text_bg"
                                    android:fontFamily="@font/google_sans"
                                    android:hint="@string/hint_publisher"
                                    android:inputType="text"
                                    android:padding="10dp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <ImageView
                                android:id="@+id/image_view_show_more"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="12dp"
                                android:background="@drawable/edit_text_bg"
                                android:tint="#9f9f9f"
                                app:srcCompat="@drawable/ic_keyboard_arrow_down" />
                        </RelativeLayout>

                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_text_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_bg"
                            android:fontFamily="@font/google_sans"
                            android:hint="@string/hint_pack_email"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_text_input_website"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text_bg"
                            android:fontFamily="@font/google_sans"
                            android:hint="@string/hint_pack_website"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_text_input_privacy"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_text_bg"
                            android:fontFamily="@font/google_sans"
                            android:hint="@string/hint_privacy"
                            android:inputType="text"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_text_input_license"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edit_text_bg"
                            android:fontFamily="@font/google_sans"
                            android:hint="@string/hint_license"
                            android:inputType="text"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Categories :" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycle_view_selected_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relative_layout_add_sticker"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:elevation="1dp"
                        android:fontFamily="@font/google_sans"
                        android:gravity="center"
                        android:text="Agregar un nuevo sticker"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/border_file"
                        android:elevation="2dp"
                        android:padding="5dp"
                        android:tint="#dde3ec" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimaryDark" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layoutManager="GridLayoutManager"
                    tools:listitem="@layout/recycler_view_item"
                    tools:spanCount="4" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:elevation="1dp" >
        <RelativeLayout
            android:layout_alignParentLeft="true"
            android:layout_marginRight="110dp"
            android:background="@drawable/background_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relative_layout_add_to_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="4dp">

                <LinearLayout
                    android:id="@+id/linear_layout_add_to_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="7dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_whatsapp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:fontFamily="@font/google_sans"
                        android:gravity="center|left"
                        android:text="AÑADIR A WHATSAPP"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentRight="true"
            android:background="@drawable/background_btn_black"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relative_layout_upload_pack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="7dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_file_upload" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>